kubernetes/apps/rook-ceph/rook-ceph/cluster/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rook-ceph-dashboard
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions:
        - "[STATUS] == 200"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "rook.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
      matches:
        - path:
            type: PathPrefix
            value: /
